exports[`FormGroup should match snapshot 1`] = `
<div
  className="form-group" />
`;

exports[`FormGroup should use a block prop (boolean) as a class name 1`] = `
<div
  className="form-group block" />
`;
